--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
-    "name": "Qrafter - POS",
+    "name": "Qrafter POS",
     "slug": "qrafter-pos",
+    "scheme": "qrafter-pos",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#292B2F"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -20,10 +20,6 @@
       "bundleIdentifier": "com.qrafter.pos"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
       "package": "com.qrafter.pos"
     },
     "web": {
