--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.94.5",
+    "@tamagui/lucide-icons": "^1.94.5",
     "@tamagui/metro-plugin": "^1.94.5",
     "babel-preset-expo": "^10.0.1",
     "expo": "~50.0.6",
@@ -35,9 +37,11 @@
     "react-helmet-async": "~2.0.4",
     "react-native": "0.73.4",
     "react-native-auth0": "^3.1.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-web": "^0.19.10",
     "tamagui": "^1.94.5",
     "typescript": "^5.3.3"
