--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@hugeicons/react-native-pro": "^0.1.6",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.0.2",
     "@tamagui/config": "^1.94.5",
     "@tamagui/lucide-icons": "^1.94.5",
     "@tamagui/metro-plugin": "^1.94.5",
+    "axios": "^1.6.8",
+    "axios-hooks": "^5.0.2",
     "babel-preset-expo": "^10.0.1",
     "expo": "~50.0.6",
+    "expo-build-properties": "^0.11.1",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.1",
     "expo-router": "~3.4.7",
@@ -33,6 +37,8 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "immer": "^10.0.4",
+    "ramda": "^0.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "~2.0.4",
@@ -40,15 +46,20 @@
     "react-native-auth0": "^3.1.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
+    "react-native-root-siblings": "^5.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^15.1.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "^0.19.10",
     "tamagui": "^1.94.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
+    "@babel/plugin-proposal-decorators": "^7.24.1",
+    "@types/ramda": "^0.29.12",
     "@types/react": "~18.2.14"
   },
   "private": true,
